--- a/20180423/index.html
+++ b/20180423/index.html
@@ -8,19 +8,26 @@
 <script>
   function execTime(t) {
     if(!t) return;
-    // var nowTime, endTime;
-    // nowTime = new Date();
-    // endTime = new Date().getTime()+t;
-    // while(endTime >= nowTime.getTime()){
-    //   nowTime = new Date();
-    // }
-    setTimeout(function () {
-      console.log(444);
-    },t)
+    var nowTime, endTime;
+    nowTime = new Date();
+    endTime = new Date().getTime()+t;
+    while(endTime >= nowTime.getTime()){
+      nowTime = new Date();
+    }
+    //错误思路
+    // setTimeout(function () {
+    //   console.log(444);
+    // },t)
   }
   console.log(1)
   execTime(3000)
   console.log(2)
+
+  //answer
+  function execTime(t) {
+    var oldTime = Date.now()
+    while(Date.now() < oldTime + t) {}
+  }
 </script>
 </body>
 </html>
